Fixed categories div being too wide for mobile devices

--- a/client/src/app/home/home.component.sass
+++ b/client/src/app/home/home.component.sass
@@ -1,6 +1,7 @@
 .categories
     border-radius: 15px
-    width: 334px
+    width: 84%
+    max-width: 336px
     margin: 5px auto
     background: #e0e0e0
     height: 85%
@@ -18,7 +19,7 @@
 
 img
     height: 170px
-    width: 334px
+    width: 100%
     position: absolute
     cursor: pointer
     
@@ -26,7 +27,6 @@ img
     height: 170px
     margin-top: 10px
     margin: 15px auto
-    width: 336px
     position: relative
     outline: none
     >p  
